<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backFromCreatePostButton"
            android:contentDescription="@string/text_back_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_black_arrow_back" />

        <TextView
            android:id="@+id/createPostTitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text_user_name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="370dp"
        android:layout_height="300sp"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/select_image" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ProgressBar
        android:id="@+id/create_post_progress"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/describe_your_food"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="10"
            android:minLines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/upload_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/upload_picture"
            android:src="@android:drawable/ic_menu_camera" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_submit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>